--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=1920 height=1080></canvas>
+      <canvas id="unity-canvas" width=1280 height=720></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/LandscapeGeneration.loader.js";
+      var loaderUrl = buildUrl + "/Landscape.loader.js";
       var config = {
-        dataUrl: buildUrl + "/LandscapeGeneration.data.br",
-        frameworkUrl: buildUrl + "/LandscapeGeneration.framework.js.br",
-        codeUrl: buildUrl + "/LandscapeGeneration.wasm.br",
+        dataUrl: buildUrl + "/Landscape.data.br",
+        frameworkUrl: buildUrl + "/Landscape.framework.js.br",
+        codeUrl: buildUrl + "/Landscape.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Team14",
         productName: "LandscapeGeneration",
@@ -93,8 +93,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "1920px";
-        canvas.style.height = "1080px";
+        canvas.style.width = "1280px";
+        canvas.style.height = "720px";
       }
 
       loadingBar.style.display = "block";
