--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Landscape.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Landscape.data.br",
-        frameworkUrl: buildUrl + "/Landscape.framework.js.br",
-        codeUrl: buildUrl + "/Landscape.wasm.br",
+        dataUrl: buildUrl + "/Landscape.data",
+        frameworkUrl: buildUrl + "/Landscape.framework.js",
+        codeUrl: buildUrl + "/Landscape.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Team14",
         productName: "LandscapeGeneration",
